@@ -1,5 +1,7 @@
 DIST psi-gmailservice-0.5.6_pre3373.tar.xz 13428 RMD160 243d512a1fd087046a0867a6e3147955e64d4fd5 SHA1 e441e782806e985acef5f807912f0432e106bb3f SHA256 862aebeab96c6f77c17d55e6f58851c17c26a85ee35bdeb6fac675a0cb665c4c
+DIST psi-gmailservice-0.5.7_pre3417.tar.xz 13504 RMD160 26e631398e81b79b1556188e4cd818786ac76e88 SHA1 994a8fb57dc0fe13a9c87678aba4db432d59968c SHA256 cef94e436cfdc2883229d94c757436b1d9694765a0a7edc49f656d784f8de249
 EBUILD psi-gmailservice-0.5.6_pre3373.ebuild 227 RMD160 10ccf5c6b51805e3222e6447d5fad03227065c5a SHA1 9fa9bda662bf8f34e60970f6cf9221fbeee46fe9 SHA256 0db2e5ee8b491cc34e87e2f9e413c1f9f0e1030004cd9bc4399ecb8ad2b16903
+EBUILD psi-gmailservice-0.5.7_pre3417.ebuild 227 RMD160 10ccf5c6b51805e3222e6447d5fad03227065c5a SHA1 9fa9bda662bf8f34e60970f6cf9221fbeee46fe9 SHA256 0db2e5ee8b491cc34e87e2f9e413c1f9f0e1030004cd9bc4399ecb8ad2b16903
 EBUILD psi-gmailservice-9999.ebuild 218 RMD160 d049b4c366d77650a53f9630a2bd1b4f8c36d3e2 SHA1 3caafcc38b4169ba437649907cd55d5d495caa00 SHA256 71131bb7ad92c0104d188d373c8dd3bd43f514e2c5e488df2c87c91a9f37b734
-MISC ChangeLog 556 RMD160 88c3b74a854bdf30a1a4d9fff5f2d62f1eb54fd7 SHA1 17796a397c935d9e1a59bd1772f9c80e5b4ec381 SHA256 346b5362e8328d31635c105f12e262e9089f646bf6f68835542d5a32d2305ef6
+MISC ChangeLog 657 RMD160 9c2853ce652efa3c285cd56391167b4ed0c70240 SHA1 6d81c0eb4bc94080f1b53e41381a071075285b99 SHA256 8506323a8d09d064dce0b9d12562640d0e60069864b6efb5589caaaf865315a5
 MISC metadata.xml 400 RMD160 7241c897e44a5a50cc9b66c1d0f661effed84625 SHA1 81915204356c04814b49c08dd44e2183195476fb SHA256 595a978d89ad62ad88541a870121c1b0187cc42aec9d3aae1261db8360d5fabf
